# ai-transparent-notes-v2

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/workflows/: release.yml
public/: html-preview.html  preview.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  mod.rs  preview.rs  shell.rs
src/components/: AIPalette.tsx  AIToolbar.tsx  AiResultDialog.tsx  CSharpToolbar.tsx  CompareDialog.tsx  CppToolbar.tsx  CssToolbar.tsx  CsvTableView.tsx  CsvToolbar.tsx  DiffBanner.tsx  DiffView.tsx  DraggableList.tsx  HtmlCssToolbar.tsx  JavaToolbar.tsx  JsToolbar.tsx  JsonToolbar.tsx  JsonTreeView.tsx  MarkdownToolbar.tsx  NoteEditor.tsx  Pane.tsx  PaneSystem.tsx  PlainTextToolbar.tsx  PythonToolbar.tsx  RichTextEditor.tsx  RtfToolbar.tsx  RustToolbar.tsx  SettingsDialog.tsx  ShellToolbar.tsx  SqlToolbar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  Toolbar.tsx  WorkspacePanel.tsx  XmlToolbar.tsx
src/hooks/: useResizable.ts
src/services/: aiService.ts  diffService.ts  storageService.ts
src/stores/: noteStore.ts  settingsStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: csvParser.ts  languageMap.ts  rtfParser.ts  showInvisiblesPlugin.ts  sqlDetect.ts  textUtils.ts  toolbarUtils.ts  xmlUtils.ts
