[package]
name = "ai-transparent-notes-v2"
version = "0.1.0"
description = "AI Transparent Notes"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_transparent_notes_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-opener = "2.5"
tauri-plugin-fs = { version = "2.5", features = ["watch"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-single-instance = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
